[gd_scene load_steps=3 format=3 uid="uid://bkbw2jqr1eg7"]

[ext_resource type="Script" path="res://core/miscs/configuration/scenes/OptionsVideo.gd" id="1"]
[ext_resource type="Theme" uid="uid://b8j47gvu61s0d" path="res://assets/themes/default.tres" id="2"]

[node name="OptionsVideo" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "label_resolution"

[node name="ResolutionList" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2

[node name="Fullscreen" type="CheckBox" parent="HBoxContainer2"]
layout_mode = 2
text = "label_fullscreen"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer3"]
layout_mode = 2

[node name="Vsync" type="CheckBox" parent="HBoxContainer3"]
layout_mode = 2
text = "label_vsync"

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer4"]
layout_mode = 2

[node name="Antialiasing" type="CheckBox" parent="HBoxContainer4"]
layout_mode = 2
text = "label_antialiasing"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="TreeDetails" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="TreeDetails"]
layout_mode = 2
text = "label_trees_details"

[node name="TreesDetailsList" type="OptionButton" parent="TreeDetails"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")

[node name="RainDetails" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="RainDetails"]
layout_mode = 2
text = "label_rain_details"

[node name="RainDetailsList" type="OptionButton" parent="RainDetails"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")

[node name="CloudsQuality" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CloudsQuality"]
layout_mode = 2
text = "label_clouds_quality"

[node name="CloudsQualityList" type="OptionButton" parent="CloudsQuality"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")

[node name="GodRays" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="GodRays"]
layout_mode = 2

[node name="GodRaysCheckbox" type="CheckBox" parent="GodRays"]
layout_mode = 2
text = "label_god_rays"

[connection signal="item_selected" from="HBoxContainer/ResolutionList" to="." method="_on_ResolutionList_item_selected"]
[connection signal="toggled" from="HBoxContainer2/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="HBoxContainer3/Vsync" to="." method="_on_Vsync_toggled"]
[connection signal="toggled" from="HBoxContainer4/Antialiasing" to="." method="_on_Antialiasing_toggled"]
[connection signal="item_selected" from="TreeDetails/TreesDetailsList" to="." method="_on_TreesDetailsList_item_selected"]
[connection signal="item_selected" from="RainDetails/RainDetailsList" to="." method="_on_RainDetailsList_item_selected"]
[connection signal="item_selected" from="CloudsQuality/CloudsQualityList" to="." method="_on_CloudsQualityList_item_selected"]
[connection signal="toggled" from="GodRays/GodRaysCheckbox" to="." method="_on_GodRays_toggled"]
